--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
+    "@capacitor/camera": "^1.0.0",
     "@capacitor/core": "2.4.7",
+    "@capacitor/filesystem": "^1.0.0",
+    "@capacitor/storage": "^1.0.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
+    "@ionic/storage": "2.0.0",
+    "@ionic/storage-angular": "^3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
