--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
+    "@capacitor/camera": "^1.0.1",
     "@capacitor/core": "2.4.7",
+    "@capacitor/filesystem": "^1.0.1",
+    "@capacitor/storage": "^1.0.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "rxjs": "~6.6.0",
