--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "@capacitor/core": "2.4.7",
     "@capacitor/filesystem": "^1.0.1",
     "@capacitor/storage": "^1.0.1",
+    "@ionic-native/core": "^5.34.0",
+    "@ionic-native/local-notifications": "^5.34.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
