--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/camera": "^1.0.1",
     "@capacitor/core": "2.4.7",
     "@capacitor/filesystem": "^1.0.1",
+    "@capacitor/local-notifications": "^1.0.2",
     "@capacitor/storage": "^1.0.1",
     "@ionic-native/core": "^5.34.0",
     "@ionic-native/local-notifications": "^5.34.0",
@@ -31,6 +32,7 @@
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
